--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
       { "src": "src/server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/src/server.js" }
+      { "src": "/(.*)", "dest": "/src/server.js" }
     ]
   }
-  
